--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-tsparticles": "^1.37.5",
     "styled-components": "^5.3.3",
     "typescript": "^4.4.2",
+    "typewriter-effect": "^2.21.0",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.0"
   },
