--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "react-router-dom": "^6.2.1",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "^5.0.1",
+    "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^8.1.0",
     "react-tsparticles": "^1.37.5",
     "styled-components": "^5.3.3",
     "typescript": "^4.4.2",
-    "typewriter-effect": "^2.21.0",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.0"
   },
